--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -471,9 +471,9 @@ annex.122.d:0 "The ancient heartland of the Czechs have been conquered by our vi
 annex.122.a:0 "Liberate a Czech state!"
 annex.122.b:0 "Liberate Czechoslovakian state!"
 annex.122.c:0 "Continue military occupation"
-annex.123.t:0 "The Annexation of the Ukraine"
+annex.123.t:0 "우크라이나 점령
 annex.123.d:0 "After a long fight with the Breadbasket of Europe, we have launched a full offensive and forced the Ukrainian Army to surrender. Kiev is now in our hands!"
-annex.123.a:0 "Occupy them, for now..."
+annex.123.a:0 "지금 장을 저것들을 점령해라.."
 annex.123.b:0 "Liberate a friendly Ukraine!"
 annex.123.c:0 "Hand it over to our good Russian friends!"
 annex.123.e:0 "Take Crimea and liberate Ukraine!"
@@ -486,33 +486,33 @@ annex.124.e:0 "Establish the Peoples' Republic of China!"
 annex.124.f:0 "Hand these territories to our loyal ally..."
 annex.125.t:0 "남중국의 운명"
 annex.125.d:0 "After our successful campaign in the Southern China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.125.c:0 "Restore AOG"
+annex.125.c:0 "일반 동아시아 회사를 복원해라"
 annex.125.g:0 "Liberate Guangxi Republic"
 annex.126.t:0 "티베트의 운명"
 annex.126.d:0 "After our successful campaign in the Tibetan Plateau we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.126.c:0 "Restore independent Tibet"
+annex.126.c:0 "독립된 티베트를 다시 만들어라"
 annex.127.t:0 "일본의 운명"
 annex.127.d:0 "After our successful campaign on the Japanese islands we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annex.127.a:0 "Continue with military occupation !"
-annex.127.b:0 "Restore independent Japan"
+annex.127.b:0 "독립된 일본을 다시 만들어라"
 annex.127.c:0 "Annex Hokkaido and restore independent Japan"
 annex.127.e:0 "Occupy Iwojima, Okinawa and restore independent Japan"
 annex.128.t:0 "타이완의 운명"
 annex.128.d:0 "After our successful campaign on the island of Taiwan we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.128.c:0 "Restore independent Taiwan"
+annex.128.c:0 "독립된 타이완을 만들어라"
 annex.129.t:0 "에티오피아의 운명"
 annex.129.d:0 "After our successful campaign in Ethiopia we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.129.a:0 "Continue with military occupation !"
-annex.129.b:0 "Create a new united Ethiopia"
-annex.129.c:0 "Liberate independent Ethiopia and Eritrea"
+annex.129.a:0 "군사점령을 계속해라!
+annex.129.b:0 "새로 연합된 에티오피아를 만들어라"
+annex.129.c:0 "독립된 에티오피아와 에리트레아를 해방시켜라"
 annex.130.t:0 "부탄의 운명"
 annex.130.d:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annex.130.a:0 "Continue the military occupation !"
-annex.130.b:0 "Restore an independent Bhutan"
-annex.130.c:0 "Integrate Bhutan"
-annex.131.t:0 "Annexation of Great Britain"
+annex.130.a:0 "군사점령을 계속해라!"
+annex.130.b:0 "독립된 부탄을 복원해라"
+annex.130.c:0 "부탄을 합병해라"
+annex.131.t:0 "대영제국 합병"
 annex.131.d:0 "After 700 years, the long conflict between Britain and Ireland has ended in an Irish victory! While we could just occupy them or set up puppet states, many in the Scottish Highlands are of Gaelic blood, which was once the kingdom of Dál Riata, and could perhaps be integrated given time. We could also annex Cornwall, which is of Celtic blood and would give us a useful base on the English Channel."
-annex.131.a:0 "We don't need any British land."
+annex.131.a:0 "우린 영국땅이 필요없다"
 annex.131.b:0 "Dál Riata shall be Irish once more!"
 annex.131.c:0 "Annex the Highlands and Cornwall!"
 annex.131.e:0 "Give Britain to our ally, Canada!"
@@ -552,12 +552,12 @@ annex.139.a:0 "Liberate Venezuela under a friendly government!"
 annex.139.b:0 "Continue with military occupation!"
 annex.140.t:0 "카리브 연방의 운명"
 annex.140.d:0 "After a long campaign all across the Caribbean Sea, we have finally managed to shatter the Caribbean defences. West Guyana is now in our hands! We must now decide on the future of the Caribbean Federation."
-annex.140.a:0 "Liberate the Caribbean Federation under a friendly government!"
-annex.140.b:0 "Continue with military occupation!"
+annex.140.a:0 "카리브 연방에 친선정부를 설립하고 해방시켜라!"
+annex.140.b:0 "군사점령을 계속해라"
 annex.141.t:0 "파나마의 운명"
 annex.141.d:0 "After a rapid campaign around the Panamá Canal, we have finally managed to shatter the Panamanian defences. Panamá City is now in our hands! We must now decide on the future of Panamá."
 annex.141.a:0 "Liberate Panamá under a friendly government!"
-annex.141.b:0 "Continue with military occupation!"
+annex.141.b:0 "군사점령을 계속해라"
 annex.142.t:0 "아이티의 운명"
 annex.142.d:0 "After a short campaign on the island of Hispaniola, we have finally managed to shatter the Haitian defences. Port-au-Prince is now in our hands! We must now decide on the future of Haiti."
 annex.142.a:0 "Liberate Haiti under a friendly government!"
@@ -576,70 +576,70 @@ annex.145.a:0 "Liberate Mexico under a friendly government!"
 annex.145.b:0 "Continue with military occupation!"
 annex.146.t:0 "칼리치아의 운명"
 annex.146.d:0 "After a short campaign across Galicia, we have managed to shatter the Galician defences. Lwow is now in our hands! We must now decide on the future of Galicia."
-annex.146.a:0 "Liberate Galicia under a friendly government!"
-annex.146.b:0 "Give it to our Polish friend"
-annex.146.c:0 "Continue with military occupation!"
+annex.146.a:0 "갈리치아에 친선정부를 설립하고 해방시켜라!"
+annex.146.b:0 "폴란드 친구들에게 주어라"
+annex.146.c:0 "군사점령을 계속해라!"
 annex.147.t:0 "백루테니아의 운명"
 annex.147.d:0 "After a short campaign across Belarus, we have managed to shatter the defences of Minsk. White Ruthenia is now in our hands! We must now decide on the future of it."
-annex.147.a:0 "Liberate White Ruthenia under a friendly government!"
-annex.147.b:0 "Give it to our Russian friend"
+annex.147.a:0 "백루테니아에 친선정부를 설립하고 해방시켜라!"
+annex.147.b:0 "러시아 친구들에게 주어라"
 annex.147.c:0 "Bring them back into our sphere!"
-annex.147.e:0 "Continue with military occupation!"
+annex.147.e:0 "군사점령을 계속해라!"
 annex.148.t:0 "슬로바키아의 운명"
 annex.148.d:0 "After a short campaign across the mountains of Slovakia, we have managed to shatter the defences of the country. Slovakia is now in our hands! We must now decide on the future of it."
-annex.148.a:0 "Liberate Slovakia under a friendly government!"
-annex.148.b:0 "Continue with military occupation!"
+annex.148.a:0 "슬로바키아에 친선정부를 설립하고 해방시켜라!"
+annex.148.b:0 "군사점령을 계속해라!"
 annex.149.t:0 "트란실바니아의 운명"
 annex.149.d:0 "After a long campaign across the Transylvania, we have managed to take control of the territory. The region is now in our hands! We must now decide on the future of it."
-annex.149.a:0 "Liberate Transylvania under a friendly government!"
-annex.149.b:0 "Give it to our Hungarian friend"
-annex.149.c:0 "Give it to our Romanian friend"
-annex.149.e:0 "Continue with military occupation!"
+annex.149.a:0 "트란실바니아에 친선정부를 설립하고 해방시켜라!"
+annex.149.b:0 "헝가리 친구들에게 주어라"
+annex.149.c:0 "루마니아 친구들에게 주어라"
+annex.149.e:0 "군사점령을 계속해라"
 annex.150.t:0 "보스니아의 운명"
 annex.150.d:0 "The divided state of Bosnia is now under our occupation after our invasion of its territory. Our troops are parading in Sarajevo and we must decide what to do with it."
-annex.150.a:0 "Give it to our Serbian friend"
+annex.150.a:0 "세르비아 친구들에게 주어라"
 annex.151.t:0 "몬테네그로의 운명"
 annex.151.d:0 "Montenegro is now firmly held in our hands after our occupation of the area, yet we can't stay in the inhospitable Montenegro forever. We must decide what to do with it."
 annex.152.t:0 "알바니아의 운명"
 annex.152.d:0 "After a short campaign across the Albanian countryside, Tirana finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
-annex.152.b:0 "Take southern Epirus and liberate the rest!"
-annex.153.t:0 "The destiny of Italy"
+annex.152.b:0 "남 에피루스를 합병하고 나머지는 해방시켜라!"
+annex.153.t:0 "이탈리아의 운명"
 annex.153.d:0 "We now have to decide what to do with Italy. We can't control those territories forever and we might have to think about creating a puppet Italian state."
-annex.153.a:0 "Liberate the Italian Federation"
-annex.153.b:0 "Liberate the Socialist Republic of Italy"
-annex.153.c:0 "Give the territory to our loyal friends"
+annex.153.a:0 "이탈리아 연방을 해방시켜라"
+annex.153.b:0 "이탈리아 사회주의 공화국을 해방시켜라"
+annex.153.c:0 "영토를 우리의 절친들에게 주자"
 annex.154.t:0 "네덜란드의 운명"
 annex.154.d:0 "After a short campaign across the marshes and the urban centres of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
 annex.155.t:0 "덴마크의 운명"
 annex.155.d:0 "After a short campaign across the numerous islands of Denmark and the capture of its capital, we have managed to take down the country. Copenhagen is now in our hands! The status of the Atlantic islands of Denmark is a particularly interesting case to deal with but we'll anyway have to decide on the future of Denmark."
-annex.155.a:0 "Liberate Denmark entirely"
-annex.155.b:0 "Take all of the islands we can and liberate the mainland"
-annex.155.c:0 "Take control of Greenland and liberate Iceland"
-annex.155.e:0 "Only liberate Iceland and leave Denmark with Greenland"
+annex.155.a:0 "덴마크 전체를 해방시켜라"
+annex.155.b:0 "덴마크 섬들을 합병하고 본토만 해방시켜라"
+annex.155.c:0 "그린란드를 통제하고 아이슬란드를 해방시켜라"
+annex.155.e:0 "아이슬란드만 해방시키고 덴마크와 그린란드는 납둬라"
 annex.156.t:0 "포르투칼의 운명"
 annex.156.d:0 "Portugal is under our control, but perhaps the Portuguese would be better off governing themselves?"
-annex.156.a:0 "Restore the Kingdom of Portugal"
-annex.156.b:0 "Liberate a Portuguese Republic"
-annex.156.c:0 "Restore the Kingdom of Portugal under our loyal princess"
-annex.157.t:0 "The French are defeated"
+annex.156.a:0 "포르투갈 왕국을 복원하라"
+annex.156.b:0 "포르투갈 공화국을 해방시켜라"
+annex.156.c:0 "포르투갈 왕국을 우리 왕비님 치하로복원시켜라"
+annex.157.t:0 "프랑스가 패배하였습니다"
 annex.157.d:0 "Paris has been captured and the French have been defeated. We have ripped out the heart of the Revolution and now we must decide what to with occupied France."
-annex.157.a:0 "Set up a French Puppet Government."
-annex.157.b:0 "Partition the French Mainland!"
-annex.157.c:0 "Liberate Bretagne and France."
-annex.157.e:0 "Total conquest is preferable."
+annex.157.a:0 "프랑스 괴뢰정부를 설립해라."
+annex.157.b:0 "프랑스 본토를 분할하라!"
+annex.157.c:0 "부고타뉴와 프랑스를 해방시켜라."
+annex.157.e:0 "전체를 합병하는 것이 낫다."
 annex.158.t:0 "남부 프랑스의 운명"
 annex.158.d:0 "We now control the southern half of France, the north is out of reach but we still need to find a way to control that region more efficiently."
-annex.158.a:0 "Set up a French Puppet Government."
-annex.158.b:0 "Liberate Occitania."
-annex.158.c:0 "Occupying the region is for the best."
-annex.159.t:0 "The Partitioning of Britain"
+annex.158.a:0 "프랑스 괴뢰정부를 설립해라."
+annex.158.b:0 "옥타니아를 해방시켜라."
+annex.158.c:0 "지역을 점령하는편이 더 낫다."
+annex.159.t:0 "영국 분할"
 annex.159.d:0 "After defeating the Union of Britain we now control Great Britain. We can partition these lands and create new countries with loyal governments or create an united Great Britain."
 annex.159.a:0 "Divide the island between England, Scotland and Wales."
-annex.159.b:0 "Create a loyal Britain."
-annex.159.c:0 "Occupy everything!"
+annex.159.b:0 "충성스런 영국을 만들어라."
+annex.159.c:0 "모든걸 합병한다!"
 annex.160.t:0 "A syndicalist Flanders-Wallonia"
 annex.160.d:0 "The French decided to give partial autonomy to Flanders-Wallonia, installing a new syndicalist government."
-annex.160.a:0 "Not a big change..."
+annex.160.a:0 "크게 달라지는건 없다."
 annex.161.t:0 "벨기에의 운명"
 annex.161.d:0 "After a short campaign across the fields of Belgium we now control the region and we must decide what to do with it. Belgium is a very divided country and splitting it along cultural lines might make for less trouble afterwards."
 annex.161.a:0 "Liberate a loyal united Flanders-Wallonia"
