--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -364,18 +364,18 @@ annex.98.t:0 "French Switzerland under our control"
 annex.98.d:0 "The peoples of the French-speaking cantons of old Switzerland have finally folded to our control."
 annex.99.t:0 "France refuses"
 annex.99.d:0 "To our great surprise the French have refused to our generous partition offer, citing various reasons and claims. Military occupation of the region will continue."
-annex.100.t:0 "하심조 아라비아의 운명"
+annex.100.t:0 "하심가 아라비아의 운명"
 annex.100.d:0 "Following the war against the Hatsemite Arabia, we are now under control of several lands once held by that Arabic state. What shall we do with them now? We could try and establish direct control it as a new province, or even setup a new independent republic in Nedj, albeit under a friendly government."
-annex.100.a:0 "Directly integrate Arabia into our empire!"
-annex.100.b:0 "Establish an independent Saudi Arabia"
-annex.101.t:0 "Independent Saudi Arabia"
-annex.101.d:0 "Saudi Arabia is free!"
+annex.100.a:0 "아라비아를 우리 제국 직속으로 합병시켜라!"
+annex.100.b:0 "독립된 사우디아라비아를 설립해라!"
+annex.101.t:0 "사우디아라비아 독립"
+annex.101.d:0 "사우디아라비아는 자유다!"
 annex.102.t:0 "프랑스의 운명"
 annex.102.d:0 "By the grace and wisdom of God, we have played our part in the destruction of the heathen Commune of France and we ended in possession of parts of France! How shall we administer captured French territory?"
-annex.102.a:0 "National France can have that land, if they join us!"
-annex.102.b:0 "We'll guide a new France!"
-annex.102.c:0 "Set up a friendly Occitania!"
-annex.102.e:0 "Actually, we'll keep these for ourselves!"
+annex.102.a:0 "국가주의 프랑스와 우리와 함께한다면, 스스로 통치하게 해라!"
+annex.102.b:0 "우리가 새로운 프랑스로 인도할 것이다!"
+annex.102.c:0 "우호적인 옥타니아를 설립해라!"
+annex.102.e:0 "우리가 계속 가지고 있을거다!"
 annex.103.t:0 "Carlists offer France!"
 annex.103.d:0 "Our scepticism in joining the Mediterranean Bloc may have been wrong! They have somehow not only defeated the Commune of France, but are now offering us a second chance in joining their cause, while we regain the French mainland! This is a wonderful opportunity to be a major power in the world again! Should we accept such an offer?"
 annex.103.a:0 "Of course we accept!"
@@ -422,25 +422,25 @@ annex.113.d:0 "After fierce fighting in the Caucasus, we have conquered and anne
 annex.113.a:0 "Continue with military occupation!"
 annex.113.b:0 "Liberate Armenia!"
 annex.113.c:0 "Hurrah!"
-annex.114.t:0 "The Annexation of Azerbaijan"
+annex.114.t:0 "아제르바이잔 합병"
 annex.114.d:0 "After fierce fighting in the Caucasus, we have conquered and annexed Azerbaijan. The Azeri army has surrendered, and the territory is under our control, but the people are still resistant."
-annex.114.a:0 "Continue with military occupation!"
-annex.114.b:0 "Liberate Azerbaijan!"
-annex.114.c:0 "Hurrah!"
-annex.115.t:0 "The Annexation of India"
+annex.114.a:0 "군사점령을 계속해라!"
+annex.114.b:0 "아제르바이잔을 해방시켜라!"
+annex.114.c:0 "우라!"
+annex.115.t:0 "인도 합병"
 annex.115.d:0 "Following our campaigns in the Indian subcontinent, we are now controlling several territories of the former states of that region. Local leaders, and also our own politicians, are petitioning for autonomy for those areas."
-annex.115.a:0 "Continue with military occupation."
-annex.115.b:0 "Create an Indian Federation"
-annex.115.c:0 "Create the Empire of India"
-annex.115.e:0 "Liberate the good socialists of the Bharatiya Commune!"
-annex.116.t:0 "The Annexation of Afghanistan"
+annex.115.a:0 "군사점령을 계속해라."
+annex.115.b:0 "인도 연방을 만들어라"
+annex.115.c:0 "인도 제국을 만들어라"
+annex.115.e:0 "바라티야 코뮌의 착한 사회주의자들을 해방시켜라!"
+annex.116.t:0 "아프가니스탄 합병"
 annex.116.d:0 "After a long fight with the Afghans, we have launched a full offensive and forced the Afghan Army to surrender. Kabul is now in our hands!"
-annex.116.a:0 "Continue with military occupation!"
-annex.116.b:0 "Liberate Afghanistan!"
-annex.117.t:0 "The Annexation of Cuba"
+annex.116.a:0 "군사점령을 계속해라!"
+annex.116.b:0 "아프가니스탄을 해방시켜라!"
+annex.117.t:0 "쿠바 합병"
 annex.117.d:0 "We have taken control over Cuba and secured American hegemony throughout the Caribbean. What should we do with the 'liberated' island?"
-annex.117.a:0 "Liberate a friendly Cuba!"
-annex.117.b:0 "Maintain military occupation."
+annex.117.a:0 "우호적인 쿠바로 해방시켜라!"
+annex.117.b:0 "군사점령을 유지한다."
 annex.118.t:0 "The Annexation of Siam"
 annex.118.d:0 "We have taken control over the Thai state and secured our dominance on the upper part of the Malay Peninsular. Now the pressing issue for our government is figuring out what we should do with the newly 'liberated' Thai provinces."
 annex.118.a:0 "Liberate a friendly Siam!"
