--- a/Kaiserreich Korean Translation/localisation/KR_Spain_FAI_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spain_FAI_l_english.yml
@@ -7,15 +7,15 @@ CNT_advisors_italysoc:0 "이탈리아의 도움"
 CNT_advisors_soviet:0 "소련의 도움"
 
 ### Tooltips ###
-CNT_won_election:0 "CNT-FAI won a fair national election\n"
-CNT_released_after_annexation:0 "CNT-FAI was released by another nation\n"
+CNT_won_election:0 "전국노동자연합이 적법한 국가선거에서 승리함\n"
+CNT_released_after_annexation:0 "전국노동자연합이 타국에 의해 건국됨\n"
 
 ### Focuses ###
-CNT_election_success:0 "Election Success"
+CNT_election_success:0 "선거 성공"
 CNT_election_success_desc:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster."
-CNT_aftermath_of_civil_war:0 "Victory in the Civil War"
+CNT_aftermath_of_civil_war:0 "내전에서의 승리"
 CNT_aftermath_of_civil_war_desc:0 "The Spanish Civil War was a bloody period of Spanish history. Though we have emerged victorious, it will take a long time before the country recovers."
-CNT_consolidating_spain:0 "Consolidating Spain"
+CNT_consolidating_spain:0 "스페인 통합"
 CNT_consolidating_spain_desc:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat."
 
 CNT_domestic_focus:0 "Mending the Rift"
@@ -69,13 +69,13 @@ CNT_tank_focus_desc:0 "Heavy armour - it provides both speed and firepower, and 
 CNT_army_innovation_focus:0 "Army Innovations"
 CNT_army_innovation_desc:0 "Above all else, we must ensure our army has the finest minds behind it to plan our offence and defence. Without them, all the fine equipment in the world will do us nothing."
 
-CNT_foreign_focus:0 "Looking Outwards"
+CNT_foreign_focus:0 "외국을 둘러보자"
 CNT_foreign_focus_desc:0 "The time has come to look outwards, beyond the rebuilding of Spain itself, and to the revolution which we must help spread across the entire world. For the working class!"
-CNT_join_france:0 "Approach the Commune"
+CNT_join_france:0 "코뮌에 접근"
 CNT_join_france_desc:0 "Our most natural allies lie with the Internationale. We must offer to join their ranks at once - for our protection, and for the benefit of all syndicalist nations."
-CNT_join_french_war:0 "Join the French War Effort"
+CNT_join_french_war:0 "프랑스 전쟁 참전"
 CNT_join_french_war_desc:0 "The Commune of France is engaged in a war which will determine the balance of the revolution here and across the world. We must offer our strength, no matter the cost."
-CNT_portugal:0 "Bringing the Revolution to Portugal"
+CNT_portugal:0 "포르투갈에 혁명의 바람을 불자"
 CNT_portugal_desc:0 "Our Iberian Federation will never be complete until we spread the revolution to our brethren in the west."
 
 ### Parties ###
