--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2427,36 +2427,36 @@ CZE_czechoslavakia_totalist:0 "체코슬로바키아 연방"
 CZE_czechoslavakia_totalist_ADJ:0 "체코슬로바키아"
 CZE_czechoslavakia_totalist_DEF:0 "체코슬로바키아 연방"
 
-CNT_FAI_authoritarian_democrat:0 "CNT-FAI"
+CNT_FAI_authoritarian_democrat:0 "전국노동자연합"
 CNT_FAI_authoritarian_democrat_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_authoritarian_democrat_DEF:0 "CNT-FAI"
-CNT_FAI_market_liberal:0 "CNT-FAI"
+CNT_FAI_authoritarian_democrat_DEF:0 "전국노동자연합"
+CNT_FAI_market_liberal:0 "전국노동자연합"
 CNT_FAI_market_liberal_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_market_liberal_DEF:0 "CNT-FAI"
-CNT_FAI_national_populist:0 "CNT-FAI"
+CNT_FAI_market_liberal_DEF:0 "전국노동자연합"
+CNT_FAI_national_populist:0 "전국노동자연합"
 CNT_FAI_national_populist_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_national_populist_DEF:0 "CNT-FAI"
-CNT_FAI_paternal_autocrat:0 "CNT-FAI"
+CNT_FAI_national_populist_DEF:0 "전국노동자연합"
+CNT_FAI_paternal_autocrat:0 "전국노동자연합"
 CNT_FAI_paternal_autocrat_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_paternal_autocrat_DEF:0 "CNT-FAI"
-CNT_FAI_radical_socialist:0 "CNT-FAI"
+CNT_FAI_paternal_autocrat_DEF:0 "전국노동자연합"
+CNT_FAI_radical_socialist:0 "전국노동자연합"
 CNT_FAI_radical_socialist_ADJ:0 "아나키-생디칼리즘 "
-CNT_FAI_radical_socialist_DEF:0 "CNT-FAI"
-CNT_FAI_social_conservative:0 "CNT-FAI"
+CNT_FAI_radical_socialist_DEF:0 "전국노동자연합"
+CNT_FAI_social_conservative:0 "전국노동자연합"
 CNT_FAI_social_conservative_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_social_conservative_DEF:0 "CNT-FAI"
-CNT_FAI_social_democrat:0 "CNT-FAI"
+CNT_FAI_social_conservative_DEF:0 "전국노동자연합"
+CNT_FAI_social_democrat:0 "전국노동자연합"
 CNT_FAI_social_democrat_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_social_democrat_DEF:0 "CNT-FAI"
-CNT_FAI_social_liberal:0 "CNT-FAI"
+CNT_FAI_social_democrat_DEF:0 "전국노동자연합"
+CNT_FAI_social_liberal:0 "전국노동자연합"
 CNT_FAI_social_liberal_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_social_liberal_DEF:0 "CNT-FAI"
-CNT_FAI_syndicalist:0 "CNT-FAI"
-CNT_FAI_syndicalist_ADJ:0 "아나키-생디칼리즘 "
-CNT_FAI_syndicalist_DEF:0 "CNT-FAI"
-CNT_FAI_totalist:0 "CNT-FAI"
+CNT_FAI_social_liberal_DEF:0 "전국노동자연합"
+CNT_FAI_syndicalist:0 "전국노동자연합"
+CNT_FAI_syndicalist_ADJ:0 "아나키-생디칼리즘"
+CNT_FAI_syndicalist_DEF:0 "전국노동자연합"
+CNT_FAI_totalist:0 "전국노동자연합"
 CNT_FAI_totalist_ADJ:0 "아나키-생디칼리즘"
-CNT_FAI_totalist_DEF:0 "CNT-FAI"
+CNT_FAI_totalist_DEF:0 "전국노동자연합"
 
 AST_australia_totalist:0 "오스트레일리아 연방"
 AST_australia_totalist_ADJ:0 "오스트레일리아"
