--- a/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
@@ -1,17 +1,17 @@
 l_english:
 
 ### Ideas ###
-defections_fng:0 "Defections to Qing"
-JAP_WAR_REP:0 "War Reparations to Germany"
-JAP_WAR_REP_GER:0 "War Reparations from Japan"
-JAP_WAR_REP_FULL:0 "War Reparations to Germany"
-JAP_WAR_REP_GER_FULL:0 "War Reparations from Japan"
-FNG_CHI_CONQUERED:0 "We Unified China"
-FNG_Fortress_Manchuria_i:0 "Fortress Manchuria"
+defections_fng:0 "청을 저버림"
+JAP_WAR_REP:0 "독일 전쟁배상금"
+JAP_WAR_REP_GER:0 "일본 전쟁배상금"
+JAP_WAR_REP_FULL:0 "독일 전쟁배상금"
+JAP_WAR_REP_GER_FULL:0 "일본 전쟁배상금"
+FNG_CHI_CONQUERED:0 "우리가 중국을 통일하였다"
+FNG_Fortress_Manchuria_i:0 "만주 요새화"
 FNG_Fortress_Manchuria_i_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the Shanhai Pass as the only easy point of entry. It is easy to fortify the Northeast when nature has already done so much of the work."
 FNG_The_National_Reclamation_War:0 "The National Reclamation War"
 FNG_The_National_Reclamation_War_desc:0 "The time has come to reclaim the South and cast down the regressive Qing. The nation rallies behind its leader in the push toward victory!"
-FNG_Backward_Industry:0 "Backward Industry"
+FNG_Backward_Industry:0 "낙후된 산업"
 FNG_Backward_Industry_desc:0 "While Fengtian may contain the second largest industrial base in East Asia, its size conceals obsolete machinery, inefficient practices, and severe mismanagement. Only extensive reforms, backed by a great deal of investment, can overcome these challenges."
 FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
 FNG_Unscrupulous_Governance_desc:0 "Despite its claims to the contrary, the Fengtian Government is plagued by endemic corruption, incompetence, and abuse of power. While this is nothing out of the ordinary for China, it impedes the proper functioning of government, and limits support for the regime."
@@ -23,11 +23,11 @@ FNG_Investment_Dearth_Chinese:0 "Limited Japanese Investment"
 FNG_Investment_Dearth_Chinese_desc:0 "Thanks to government incentives private Chinese investment has grown, but there is still an overall shortage."
 FNG_Year_of_Righteous_Effort:0 "The Year of Righteous Effort"
 FNG_Year_of_Righteous_Effort_desc:0 "With the Grand Marshal's Proclamation, the nation is united in a strenuous effort to prepare for the rigours of war."
-FNG_Land_Reform_Underway:0 "Land Reform Underway"
+FNG_Land_Reform_Underway:0 "토지 계획 진행"
 FNG_Land_Reform_Underway_desc:0 "Land reform is a long and difficult process, and will cost the state in the short term, but prosperity awaits over the horizon."
-FNG_Japanese_Aid_Cut:0 "Japanese Aid Cut"
+FNG_Japanese_Aid_Cut:0 "일본 원조 중단"
 FNG_Japanese_Aid_Cut_desc:0 "Japan has cut all aid to the government as a means of punishment for what it sees as insubordination."
-FNG_Buying_Silver:0 "Buying Silver"
+FNG_Buying_Silver:0 "은 매입"
 FNG_Buying_Silver_desc:0 "Silver, by definition, is expensive and the government is presently buying a great deal of it. Once the reserve is full, however, it will have a reliable basis for currency and credit."
 FNG_Central_Bank_Collapse:0 "Central Bank Collapse"
 FNG_Central_Bank_Collapse_desc:0 "The Central Bank seems to have misplaced millions of taels worth of silver precisely as Japanese banks called for their loans to be repaid. How could this have happened?"
@@ -113,12 +113,12 @@ FNG_CER_Tax_desc:0 "The regular operations of the Chinese Eastern Railway are cu
 
 # Political Power Bonus Tooltips #
 
-BONUS_PP_20:0 "Bonus Political Power: §G+20§!\n"
-BONUS_PP_25:0 "Bonus Political Power: §G+25§!\n"
-BONUS_PP_30:0 "Bonus Political Power: §G+30§!\n"
-BONUS_PP_50:0 "Bonus Political Power: §G+50§!\n"
-BONUS_PP_80:0 "Bonus Political Power: §G+80§!\n"
-BONUS_PP_100:0 "Bonus Political Power: §G+100§!\n"
+BONUS_PP_20:0 "정치력 점수 보너스: §G+20§!\n"
+BONUS_PP_25:0 "정치력 점수 보너스: §G+25§!\n"
+BONUS_PP_30:0 "정치력 점수 보너스: §G+30§!\n"
+BONUS_PP_50:0 "정치력 점수 보너스: §G+50§!\n"
+BONUS_PP_80:0 "정치력 점수 보너스: §G+80§!\n"
+BONUS_PP_100:0 "정치력 점수 보너스: §G+100§!\n"
 
 ### Popularity Tooltips ###
 
@@ -213,26 +213,26 @@ strengthen_army:0 "Army Priority"
 enrich_country:0 "Economic Priority"
 
 ### Parties ###
-FNG_totalist_party:0 "만주 공산당"
-FNG_totalist_party_long:0 "만주 공산당"
-FNG_radical_socialist_party:0 "만주 급진당"
-FNG_radical_socialist_party_long:0 "Manchu Radicals"
-FNG_syndicalist_party:0 "Manchu Syndicalists"
-FNG_syndicalist_party_long:0 "Manchu Syndicalists"
+FNG_totalist_party:0 "만주 공산주의자"
+FNG_totalist_party_long:0 "만주 공산주의자"
+FNG_radical_socialist_party:0 "만주 급진주의자"
+FNG_radical_socialist_party_long:0 "만주 급진주의자"
+FNG_syndicalist_party:0 "만주 생디칼리스트"
+FNG_syndicalist_party_long:0 "만주 생디칼리스트"
 FNG_social_democrat_party:0 "사회민주 연맹"
 FNG_social_democrat_party_long:0 "사회민주 연맹"
 FNG_social_liberal_party:0 "사회자유주의 연맹"
 FNG_social_liberal_party_long:0 "사회자유주의 연맹"
 FNG_market_liberal_party:0 "협화회"
-FNG_market_liberal_party_long:0 "협화회 (Xiehehui)"
+FNG_market_liberal_party_long:0 "협화회"
 FNG_social_conservative_party:0 "교통계"
-FNG_social_conservative_party_long:0 "교통계 (Jiaotongxi)"
+FNG_social_conservative_party_long:0 "교통계"
 FNG_authoritarian_democrat_party:0 "공보회"
-FNG_authoritarian_democrat_party_long:0 "공보회 (Guangfuxi)"
+FNG_authoritarian_democrat_party_long:0 "공보회"
 FNG_paternal_autocrat_party:0 "장씨 군벌"
 FNG_paternal_autocrat_party_long:0 "장씨 군벌"
-FNG_national_populist_party:0 "Imperial Han Society"
-FNG_national_populist_party_long:0 "Huanghanhui (Imperial Han Society)"
+FNG_national_populist_party:0 "한족 황실"
+FNG_national_populist_party_long:0 "한족 황실"
 
 ### Leader Descriptions ###
 FNG_zhang_zuolin_desc:0 "Born to an impoverished family near Shenyang, Zhang Zuolin began his meteoric rise as a bandit exploiting the chaotic military situation of the late Guangxu Era. Despite his illiteracy and lack of a formal education, the 'Old Marshal' is capable and aware of his own deficiencies, happy to seek advice and delegate where necessary.\n\nHowever, he is also known for a short temper and an unforgiving nature, readily holding deep grudges. Zhang is also sometimes greatly self-centred, formerly crashing the entire Northeastern economy to support his war efforts, and so in ideological terms he could be called staunchly 'Pro-Zhang'."
