--- a/Kaiserreich Korean Translation/localisation/KR_April_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_April_l_english.yml
@@ -10,7 +10,7 @@ how_to_switch:0 "§RTo switch, either open the console and type "tag EMP" or res
 no_april:0 "모더들이 당신의 타임라인에 다시는 등장하지 않을 것입니다."
 april.1.e:0 "오 안돼!"
 
-april.2.t:0 "A New Threat"
+april.2.t:0 "새로운 위협"
 april.2.d:0 "Following the establishment of the Great Old Modders a new, similar, phenomenon happened in Korea. This second landing unleashed new 'Modders' and various new species previously unknown to us. They claim to be from the same universe as this 'empire' and that their mission is to bring it down for the good of humanity.\nThey soon also occupied the neighbouring provinces and are now expanding in order to chase their supposed enemies. Our high command is confused over their identity, are they with us or against us?"
 april.2.a:0 "Damned rebels! (Play the Empire)"
 april.2.b:0 "Actually, those guys seem cooler! (Play the Rebels)"
