--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -130,7 +130,7 @@ worldnews.30.d:0 "비록 일본이 1921년 명예로운 강화 이후 수많은 
 worldnews.30.a:0 "문제로구나."
 
 worldnews.31.t:0 "프랑스에서 노동당이 선출되다"
-worldnews.31.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 그의 당파인 노동당에 의해 발생했습니다. 그들은 현재 CSP의 선두주자이며, 민주주의의 연장을 상징하며 코뮌을 분권화하기 위해 영국인으로부터 영감을 얻었습니다."
+worldnews.31.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 그의 당파인 노동당에 의해 발생했습니다. 그들은 현재 CSP의 선두주자이며, 민주주의의 연장을 상징하며 코뮌을 분권화하기 위해 영국인으로부터 영감을 얻었습니다."
 worldnews.31.a:0 "흥미롭군."
 
 worldnews.32.t:0 "우크라이나에 생디칼리즘이 번지다"
@@ -138,19 +138,19 @@ worldnews.32.d:0 "세계대전 이후, 우크라이나는 친 독일성향인 He
 worldnews.32.a:0 "심지어 미틀오이로파조차도 안전하지 않군"
 
 worldnews.33.t:0 "프랑스에서 자코뱅파가 선출되었습니다."
-worldnews.33.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 자코뱅파에 의해 발생했습니다. 그들은 프랑스의 중앙 집권화를 지지하고, 프랑스를 생디칼리스트들의 선봉 상태로 만들고 싶어합니다. 그들은 이제 CSP에서 다수를 차지합니다."
+worldnews.33.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 자코뱅파에 의해 발생했습니다. 그들은 프랑스의 중앙 집권화를 지지하고, 프랑스를 생디칼리스트들의 선봉 상태로 만들고 싶어합니다. 그들은 이제 CSP에서 다수를 차지합니다."
 worldnews.33.a:0 "흥미롭군."
 
 worldnews.34.t:0 "프랑스에서 소렐주의정당이 선출되었습니다."
-worldnews.34.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 현재 CSP에서 다수를 차지한 소렐주의자들에 의해 발생했습니다. 소렐주의자들은 정통 생디칼리스트이며, Bourse Générale du Travail (국회)를 주 기관으로 하여 보다 중앙 집권적인 국가를 건설하고자합니다."
+worldnews.34.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 현재 CSP에서 다수를 차지한 소렐주의자들에 의해 발생했습니다. 소렐주의자들은 정통 생디칼리스트이며, Bourse Générale du Travail (국회)를 주 기관으로 하여 보다 중앙 집권적인 국가를 건설하고자합니다."
 worldnews.34.a:0 "흥미롭군."
 
 worldnews.35.t:0 "프랑스에서 아나키스트정당이 선출되었습니다."
-worldnews.35.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 우크라이나 혁명가인 Nestor Makhno에 의해 영감을 얻은 아나키스트들에 의해 발생했습니다. 아나키스트정당은 현재 CSP를 이끌어 가고 있으며 지역의 자유와 CSP의 권력을 과감히 줄이는데 찬성합니다."
+worldnews.35.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 우크라이나 혁명가인 Nestor Makhno에 의해 영감을 얻은 아나키스트들에 의해 발생했습니다. 아나키스트정당은 현재 CSP를 이끌어 가고 있으며 지역의 자유와 CSP의 권력을 과감히 줄이는데 찬성합니다."
 worldnews.35.a:0 "흥미롭군."
 
 worldnews.36.t:0 "프랑스의 선거 교착"
-worldnews.36.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n 4개의 파벌 중 누구도 다수석을 얻지 못했습니다. 선거 전과 마찬가지로 연정이 설립되어야 하지만, 코뮌의 정치 형태는 어떻게 변할지는 CSP에 있는 사람들만이 알고 있습니다."
+worldnews.36.d:0 "프랑스 코뮌은 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n 4개의 파벌 중 누구도 다수석을 얻지 못했습니다. 선거 전과 마찬가지로 연정이 설립되어야 하지만, 코뮌의 정치 형태는 어떻게 변할지는 CSP에 있는 사람들만이 알고 있습니다."
 worldnews.36.a:0 "흥미롭군."
 
 worldnews.37.t:0 "4차 발칸 전쟁"
