--- a/Kaiserreich Korean Translation/localisation/KR_Portugal_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Portugal_l_english.yml
@@ -8,11 +8,11 @@ POR_regulos:0 "Raises armed Militia divisions with the help of our vassal chiefs
 POR_secret_police:0 "비밀 경찰"
 POR_black_monday:0 "검은 월요일"
 POR_black_monday_desc:0 "Due to its mostly agrarian economy, Portugal has suffered greatly from the fallout of Black Monday."
-POR_portuguese_economic_cooperation:0 "Economic Cooperation with Spain"
+POR_portuguese_economic_cooperation:0 "스페인과의 경제 협력"
 POR_portuguese_economic_cooperation_desc:0 "Shared ideological and economic ideas between both Portugal and Spain have led to a series of mutually beneficial trade agreements between both parties."
-POR_partial_recovery:0 "Partial Recovery"
+POR_partial_recovery:0 "부분적인 회복"
 POR_partial_recovery_desc:0 "Despite the worst of Black Monday’s after effects passing, Portugal’s economy continues to suffer."
-POR_austerity:0 "Christian Austerity"
+POR_austerity:0 "기독교적 금욕"
 POR_austerity_desc:0 "A series of mildly unpopular measures have been taken by the government to finally rid Portugal of its recession and make preparations for war. While the people wish to purchase luxury goods, there is a sense of understanding of the true dangers faced by Portugal, both economically and militarily."
 POR_kingpath:0 "Deus Salve O Rei"
 POR_kingpath_desc:0 "With the Integralist experiment ending in failure and disgrace, the King can, at long last, rid himself and the nation of their influence."
